web ui: format using prettier

--- a/ui/web/index.html
+++ b/ui/web/index.html
@@ -7,11 +7,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <link rel="stylesheet" href="css/leaflet.css" />
-    <link rel="stylesheet" href="css/leaflet-routing-machine.css" />
-    <link rel="stylesheet" href="css/Leaflet.PolylineMeasure.css" />
-    <link rel="stylesheet" href="css/leaflet.contextmenu.css" />
-    <link rel="stylesheet" href="css/Control.Geocoder.css" />
+    <link rel="stylesheet" href="css/deps/leaflet.css" />
+    <link rel="stylesheet" href="css/deps/leaflet-routing-machine.css" />
+    <link rel="stylesheet" href="css/deps/Leaflet.PolylineMeasure.css" />
+    <link rel="stylesheet" href="css/deps/leaflet.contextmenu.css" />
+    <link rel="stylesheet" href="css/deps/Control.Geocoder.css" />
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
@@ -21,13 +21,13 @@
         <input type="button" value="OK" id="search-profile-save" />
       </div>
     </div>
-    <script src="js/leaflet-src.js"></script>
-    <script src="js/leaflet-routing-machine.js"></script>
-    <script src="js/Control.Geocoder.js"></script>
+    <script src="js/deps/leaflet-src.js"></script>
+    <script src="js/deps/leaflet-routing-machine.js"></script>
+    <script src="js/deps/Control.Geocoder.js"></script>
     <script src="js/profiles.js"></script>
     <script src="js/L.Routing.PPR.js"></script>
-    <script src="js/Leaflet.PolylineMeasure.js"></script>
-    <script src="js/leaflet.contextmenu.js"></script>
+    <script src="js/deps/Leaflet.PolylineMeasure.js"></script>
+    <script src="js/deps/leaflet.contextmenu.js"></script>
     <script src="js/geojson-overlay.js"></script>
     <script src="js/map-links.js"></script>
     <script src="js/index.js"></script>
